# digitalbits-core

./: .dir-locals.el  .gitignore  .travis.yml  Bug-Template.md  CONTRIBUTING.md  INSTALL-Windows.md  INSTALL.md  ISSUE_TEMPLATE.md  Makefile.am  README.md  build_deploy.sh  clean.sh  configure.ac  deploy.sh  deploy_deb.sh  deploy_rpm.sh  travis-build.sh
Builds/VisualStudio/: digitalbits-core.sln  digitalbits-core.vcxproj  digitalbits-core.vcxproj.filters
docs/: architecture.md  db-schema.md  digitalbits-core.1.md  digitalbits-core_example.cfg  digitalbits-core_standalone.cfg  digitalbits-core_testnet.cfg  fuzzing.md  history.md  integration.md  ledger.md  readme.md
docs/software/: admin.md  commands.md  testnet.md
lib/soci/src/core/: backend-loader.cpp
src/: Makefile.am
src/catchup/: CatchupConfiguration.h
src/crypto/: readme.md
src/history/: HistoryArchive.cpp  HistoryManager.h  SerializeTests.cpp  readme.md
src/historywork/: PutHistoryArchiveStateWork.cpp
src/ledger/: LedgerManager.h
src/main/: CommandHandler.cpp  Config.cpp  Config.h  ConfigTests.cpp  fuzz.cpp  main.cpp
src/scp/: readme.md
src/test/: selftest-nopg  selftest-pg  test.cpp
src/transactions/: InflationOpFrame.cpp
